pallets/did-offchain-trade/rpc/target/release/build/anyhow-40226db49e0cd90f/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/hashimototatsuki/substrate-DIDDIDTrade/pallets/did-offchain-trade/rpc/target/release/build/anyhow-40226db49e0cd90f/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
